updated new components

--- a/uwazitek/src/app/app.component.css
+++ b/uwazitek/src/app/app.component.css
@@ -1,9 +1,15 @@
 main {
-    background-image: url('/assets/background-image.jpg');
-    background-color: rgb(77, 73, 80);
+    background-image: url('https://images.unsplash.com/photo-1666875758412-5957b60d7969?q=80&w=1632&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    background-color: rgb(238, 233, 241);
     padding: 100px;
-    size-adjust: auto;
+    size-adjust: 50%;
 }
 h1 {
     text-align: center;
+    text-wrap: center;
+}
+h2 {
+    text-wrap: center;
+    font-weight: 200;
+    color: rgb(190, 85, 85);
 }
