--- a/uwazitek/src/app/login/login.component.html
+++ b/uwazitek/src/app/login/login.component.html
@@ -1,1 +1,29 @@
-<p>login works!</p>
+<section class="login-container">
+    <form class="loginForm" >
+      <div>
+        <label for="email">Email:</label>
+        <input type="email" id="email" formControlName="email" required>
+        
+      </div>
+  
+      <div>
+        <label for="password">Password:</label>
+        <input type="password" id="password" formControlName="password" required minlength="5">
+    
+      </div>
+  
+      <div>
+        <button class="login" type="submit">LOG IN</button>
+      </div>
+      <div id="sign-up">
+        <p>Dont have an Account?</p>
+        <a [routerLink]= "['/signup']">SignUp</a>
+      </div>
+  
+      <div id="forget">
+        <a routerLink="['/resetpassword]">Forgot Password?</a>
+      </div>
+      <div id="form-feedback">Login Successful</div>
+    </form>
+</section>
+  
