--- a/uwazitek/src/app/login/login.component.css
+++ b/uwazitek/src/app/login/login.component.css
@@ -1,22 +1,44 @@
-body {
+body{
+    background-color: #10536b;
+    height: 100vh;
+}
+
+main {
     font-family: 'Arial', sans-serif;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    height: 100vh;
-    background-color: #86151546;
+    height: 100%;
+    width: 100%;
     margin: 0;
-
+    /* padding: 0 30px; */
+    /* background-image: url('../../../public/assets/white-link.jpg'); */
+    background-position: center;
+    background-size: cover;
+    position: relative;
 }
+
+/* main::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.2); 
+    z-index: 0; 
+} */
 
 .login-container {
     background: #7d6cc9;
-    padding: 50px;
+    padding: 20px;
     border-radius: 15px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: 100%;
+    /* width: 100%; */
     max-width: 500px;
-    height: fit-content;
+    /* height: auto; */
+    /* z-index: 10; */
+
 }
 
 label {
@@ -70,13 +92,36 @@ a:hover{
     font-weight: 100;
     color: rgb(20, 19, 19);
 }
-.login-image{
-    padding: 45%;
-    border-radius: 5px;
+
+h2 {
+    /* height: auto; */
+    text-align: center;
+    text-wrap: center;
 }
 
+#logo-image{
+    height: 100px;
+}
 
-  
-  
+.left{
+    width: 40%;
+    max-height: 60%;
+    border-radius: 10px;
+    /* border: red 3px solid; */
+    object-fit: cover;
+}
 
-  
+.left img{
+    position: relative;
+    width: 100%;
+    /* height: 40px; */
+}
+
+.right{
+    /* border: yellow 2px solid; */
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
