--- a/uwazitek/src/app/login/login.component.html
+++ b/uwazitek/src/app/login/login.component.html
@@ -1,29 +1,55 @@
-<section class="login-container">
-    <form class="loginForm" >
-      <div>
-        <label for="email">Email:</label>
-        <input type="email" id="email" formControlName="email" required>
-        
-      </div>
+
+<body>
   
-      <div>
-        <label for="password">Password:</label>
-        <input type="password" id="password" formControlName="password" required minlength="5">
-    
-      </div>
-  
-      <div>
-        <button class="login" type="submit">LOG IN</button>
-      </div>
-      <div id="sign-up">
-        <p>Dont have an Account?</p>
-        <a [routerLink]= "['/signup']">SignUp</a>
-      </div>
-  
-      <div id="forget">
-        <a routerLink="['/resetpassword]">Forgot Password?</a>
-      </div>
-      <div id="form-feedback">Login Successful</div>
-    </form>
-</section>
-  
+  <main>
+    <div class="left">
+      <img src="assets/clouds.jpg" alt="" srcset="">
+    </div>
+    <div class="right">
+
+      <header class="brand-name">
+      <img src="assets/logo.png" alt="" srcset="" id="logo-image">
+      <h2> Login Page </h2>
+      </header>
+      <section class="content">
+      </section>
+    <section class="login-container">
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+          <div>
+            <label for="email">Email:</label>
+            <input type="email" id="email" formControlName="email" required>
+            <div *ngIf="email?.invalid && email?.touched">
+              <small *ngIf="email?.errors?.['required']">Email is required</small>
+                <small *ngIf="email?.errors?.['email']"> correct email format</small>
+            </div>
+            </div>
+      
+          <div>
+            <label for="password">Password:</label>
+            <input type="password" id="password" formControlName="password" required minlength="5">
+            <div *ngIf="password?.invalid && password?.touched">
+              <small *ngIf="password?.errors?.['required']">Password is required</small>
+              <small *ngIf="password?.errors?.['minlength']">Minimum of 5 characters </small>
+            </div>
+          </div>
+      
+          <div>
+            <button class="login" type="submit">LOG IN</button>
+          </div>
+          <nav>
+            <p>Don't have an Account</p>
+            <a routerLink="/signup">Signup</a>
+            <br>
+            <p>Forgot your password</p>
+            <a routerLink="/reset-password">Reset Password</a>
+          </nav>
+          <div  id="form-feedback">
+           <div *ngIf="loginError" class="error-message">{{loginError}}</div>
+           <div *ngIf="loginSuccess" class="succes-message">{{loginSuccess}}</div>
+          </div>
+        </form>
+    </section>
+    </div>
+  </main>
+
+</body>
