--- a/uwazitek/src/app/signup/signup.component.html
+++ b/uwazitek/src/app/signup/signup.component.html
@@ -1,1 +1,49 @@
-<p>signup works!</p>
+
+<section class="content">
+    <h2>Sign up Page </h2>
+</section>
+<section class="signup-container">
+    <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+        <div>
+            <label for="fname">First Name:</label>
+            <input id="fname" type="text" formControlName="fname">
+            <div *ngIf="fname?.invalid && fname?.touched">
+              <small *ngIf="fname?.errors?.['required']">First Name is required</small>
+            </div>
+          </div>
+        <div>
+            <label for="Sname">Second Name:</label>
+            <input id="Sname" type="text" formControlName="Sname">
+            <div *ngIf="Sname?.invalid && Sname?.touched">
+                <small *ngIf="Sname?.errors?.['required']">Second name is required</small>
+            </div>
+        </div>
+        <div>
+            <label for="email"> Email:</label>
+            <input id="email" type="email" formControlName="email">
+            <div *ngIf="email?.invalid && email?.touched">
+                <small *ngIf="email?.errors?.['required']">Email is required</small>
+                <small *ngIf="email?.errors?.['email']"> correct email format</small>
+            </div>
+        </div>
+        <div>
+            <label for="password">Password:</label>
+            <input id="password" type="password" formControlName="password">
+            <div *ngIf="password?.invalid && password?.touched">
+                <small *ngIf="password?.errors?.['required']">Password is required</small>
+                <small *ngIf="password?.errors?.['minlength']">should have 8 characters</small>
+            </div>
+        </div>
+        <div>
+            <label for="cpassword"> Confirm Password:</label>
+            <input id="cpassword" type="password" formControlName="cpassword">
+            <div *ngIf="cpassword?.invalid && cpassword?.touched">
+                <small *ngIf="cpassword?.errors?.['required']">Confirm password is required</small>
+                <small *ngIf="cpassword?.errors?.['minlength']">should have 8 characters</small>
+            </div>
+        </div>
+        <div>
+        <button class="signup" type="submit" [disabled]="signupForm.invalid">Sign Up</button>
+        </div>
+    </form>
+</section>
