--- a/uwazitek/src/app/signup/signup.component.html
+++ b/uwazitek/src/app/signup/signup.component.html
@@ -1,49 +1,53 @@
 
-<section class="content">
+<header class="brand-name">
+    <img src="assets/logo.png" alt="" srcset="" id="logo-image">
     <h2>Sign up Page </h2>
-</section>
-<section class="signup-container">
-    <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
-        <div>
-            <label for="fname">First Name:</label>
-            <input id="fname" type="text" formControlName="fname">
-            <div *ngIf="fname?.invalid && fname?.touched">
-              <small *ngIf="fname?.errors?.['required']">First Name is required</small>
+</header>
+<body>
+    <section class="signup-container">
+        <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+          <div>
+            <label for="first_name">First Name:</label>
+            <input id="first_name" type="text" formControlName="first_name">
+            <div *ngIf="signupForm.get('first_name')?.invalid && signupForm.get('first_name')?.touched">
+              <small *ngIf="signupForm.get('first_name')?.errors?.['required']">First Name is required</small>
             </div>
           </div>
-        <div>
-            <label for="Sname">Second Name:</label>
-            <input id="Sname" type="text" formControlName="Sname">
-            <div *ngIf="Sname?.invalid && Sname?.touched">
-                <small *ngIf="Sname?.errors?.['required']">Second name is required</small>
+      
+          <div>
+            <label for="last_name">Last Name:</label>
+            <input id="last_name" type="text" formControlName="last_name">
+            <div *ngIf="signupForm.get('last_name')?.invalid && signupForm.get('last_name')?.touched">
+              <small *ngIf="signupForm.get('last_name')?.errors?.['required']">Last Name is required</small>
             </div>
-        </div>
-        <div>
-            <label for="email"> Email:</label>
+          </div>
+      
+          <div>
+            <label for="email">Email:</label>
             <input id="email" type="email" formControlName="email">
-            <div *ngIf="email?.invalid && email?.touched">
-                <small *ngIf="email?.errors?.['required']">Email is required</small>
-                <small *ngIf="email?.errors?.['email']"> correct email format</small>
+            <div *ngIf="signupForm.get('email')?.invalid && signupForm.get('email')?.touched">
+              <small *ngIf="signupForm.get('email')?.errors?.['required']">Email is required</small>
+              <small *ngIf="signupForm.get('email')?.errors?.['email']">Please enter a valid email address</small>
             </div>
-        </div>
-        <div>
+          </div>
+      
+          <div>
             <label for="password">Password:</label>
             <input id="password" type="password" formControlName="password">
-            <div *ngIf="password?.invalid && password?.touched">
-                <small *ngIf="password?.errors?.['required']">Password is required</small>
-                <small *ngIf="password?.errors?.['minlength']">should have 8 characters</small>
+            <div *ngIf="signupForm.get('password')?.invalid && signupForm.get('password')?.touched">
+              <small *ngIf="signupForm.get('password')?.errors?.['required']">Password is required</small>
+              <small *ngIf="signupForm.get('password')?.errors?.['minlength']">Password should have at least 8 characters</small>
             </div>
-        </div>
-        <div>
-            <label for="cpassword"> Confirm Password:</label>
-            <input id="cpassword" type="password" formControlName="cpassword">
-            <div *ngIf="cpassword?.invalid && cpassword?.touched">
-                <small *ngIf="cpassword?.errors?.['required']">Confirm password is required</small>
-                <small *ngIf="cpassword?.errors?.['minlength']">should have 8 characters</small>
-            </div>
-        </div>
-        <div>
-        <button class="signup" type="submit" [disabled]="signupForm.invalid">Sign Up</button>
-        </div>
-    </form>
-</section>
+          </div>
+      
+          <div>
+            <button class="signup" type="submit" [disabled]="signupForm.invalid">Sign Up</button>
+          </div>
+      
+          <div id="form-feedback">
+            <div *ngIf="signupinError" class="error-message">{{signupinError}}</div>
+            <div *ngIf="signupinSuccess" class="success-message">{{signupinSuccess}}</div>
+          </div>
+        </form>
+      </section>
+</body>      
