--- a/uwazitek/src/app/add-users/hospital/user-hospital.component.css
+++ b/uwazitek/src/app/add-users/hospital/user-hospital.component.css
@@ -2,7 +2,7 @@
     max-width: 500px;
     margin: auto;
     padding: 1rem;
-    background-color: #f9f9f9;
+    background-color: #67ebe0a9;
     border-radius: 8px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   }
@@ -12,16 +12,23 @@
   }
   
   label {
-    display: block;
+    display: flow-root;
     margin-bottom: 0.5rem;
-    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
   }
   
   input, textarea {
-    width: 100%;
+    width: 80%;
     padding: 0.5rem;
     border: 1px solid #ccc;
     border-radius: 4px;
+  }
+  h2 {
+    height:fit-content;
+    font-weight: bold;
+    font-size: large;
+    position: center;
+
   }
   
   .error {
