--- a/uwazitek/src/app/add-users/insurance/user-insurance.component.html
+++ b/uwazitek/src/app/add-users/insurance/user-insurance.component.html
@@ -1,1 +1,29 @@
-<p>user-insurance works!</p>
+<div class="insurance-form-container">
+    <form [formGroup]="insuranceForm">
+      <h2>Insurance Details</h2>
+  
+      <div class="form-group">
+        <div>
+        <label for="insuranceName">Insurance Name :</label>
+        <input type="text" id="insuranceName" formControlName="insuranceName"required />
+        <div *ngIf="insuranceForm.get('insuranceName')?.invalid && insuranceForm.get('insuranceName')?.touched" class="error">
+        </div>
+      </div>
+        <div>
+        <label for="insuranceAddress">Insurance Address :</label>
+        <input type="text" id="insuranceAddress" formControlName="insuranceAddress" required />
+        <div *ngIf="insuranceForm.get('insuranceAddress')?.invalid && insuranceForm.get('insuranceAddress')?.touched" class="error">
+        </div>
+      </div>
+      <div>
+        <label for="phoneNumber">Contact Phone Number :</label>
+        <input type="number"  id="address" formControlName="phoneNumber" required />
+        <div *ngIf="insuranceForm.get('phoneNumber')?.invalid && insuranceForm.get('phoneNumber')?.touched" class="error">
+          
+        </div>
+      </div>
+      </div>
+      <button type="submit" [disabled]="insuranceForm.invalid">Submit</button>
+    </form>
+  </div>
+  
