--- a/uwazitek/src/app/add-users/add-user-page.component.css
+++ b/uwazitek/src/app/add-users/add-user-page.component.css
@@ -2,18 +2,13 @@
     display: flex;
     gap: 1rem;
     margin-bottom: 1rem;
+    background-color: aqua;
+    height:fit-content;
   }
+.main-container{
+  padding: 5px;
+  display:grid;
+
+}
   
-  button {
-    padding: 0.5rem 1rem;
-    background-color: #1976d2;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #1565c0;
-  }
   
