added new components on the settings

--- a/uwazitek/src/app/add-users/add-user-page.component.css
+++ b/uwazitek/src/app/add-users/add-user-page.component.css
@@ -2,7 +2,7 @@
     display: flex;
     gap: 1rem;
     margin-bottom: 1rem;
-    background-color: aqua;
+    background-color: rgba(35, 47, 221, 0.829);
     height:fit-content;
   }
 .main-container{
@@ -10,5 +10,11 @@
   display:grid;
 
 }
-  
+label{
+  font-style: bold;
+  background-color: black;
+}
+label:hover{
+  color:bisque;
+}
   
