--- a/uwazitek/src/app/add-users/hospital/user-hospital.component.css
+++ b/uwazitek/src/app/add-users/hospital/user-hospital.component.css
@@ -2,7 +2,7 @@
     max-width: 500px;
     margin: auto;
     padding: 1rem;
-    background-color: #67ebe0a9;
+    background-color: #f5f3f3;
     border-radius: 8px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   }
@@ -20,7 +20,7 @@
   input, textarea {
     width: 80%;
     padding: 0.5rem;
-    border: 1px solid #ccc;
+    border: 1px solid #f0eded;
     border-radius: 4px;
   }
   h2 {
@@ -46,7 +46,7 @@
     cursor: pointer;
   }
   button:disabled {
-    background-color: #ccc;
+    background-color: #30c0d3;
     cursor: not-allowed;
   }
   
