--- a/uwazitek/src/app/settings/settings.component.css
+++ b/uwazitek/src/app/settings/settings.component.css
@@ -6,8 +6,14 @@
   
   .settings-tab {
     margin-bottom: 20px;
-    background-color: brown;
+    background-color: rgb(36, 83, 211);
     height: fit-content;
     
+  }
+  label {
+    color:black
+  }
+  label :hover{
+    color:beige;
   }
   
