--- a/uwazitek/src/app/settings/user-management/user-management.component.html
+++ b/uwazitek/src/app/settings/user-management/user-management.component.html
@@ -1,7 +1,6 @@
 
 <div class="main-container">
 <p>Manage users by Editing, or Removing accounts.</p>
-<h2>User Management</h2>
 <table mat-table [dataSource]="users" class="mat-elevation-z8">
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef> Name </th>
@@ -16,8 +15,8 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef> Actions </th>
     <td mat-cell *matCellDef="let user">
-      <button mat-button color="primary" (click)="editUser(user)">Edit</button>
-      <button mat-button color="warn" (click)="deleteUser(user)">Delete</button>
+      <button mat-button color="primary" (click)="openEditUserDialog(user)">Edit</button>
+      <button mat-button color="warn" (click)="openConfirmDeleteDialog(user)">Delete</button>
     </td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
