--- a/uwazitek/src/app/activity/activity.component.html
+++ b/uwazitek/src/app/activity/activity.component.html
@@ -1,1 +1,15 @@
 <p>activity works!</p>
+<div class="main-container">
+    <div class="settings-tab">
+      <mat-tab-group>
+        <mat-tab label="Claim Reports">
+          <app-claim-reports></app-claim-reports>
+        </mat-tab>
+        <mat-tab label="Current Users">
+          <app-current-users></app-current-users>
+        </mat-tab>
+        </mat-tab-group>
+    </div>
+  </div>
+  
+
