--- a/uwazitek/src/app/settings/user-management/confirm-delete-dialog/confirm-delete-dialog.component.html
+++ b/uwazitek/src/app/settings/user-management/confirm-delete-dialog/confirm-delete-dialog.component.html
@@ -1,7 +1,8 @@
 
-<h2 mat-dialog-title>Confirm Delete</h2>
+<div class="content-form">
     <mat-dialog-content>Are you sure you want to delete {{ data.user.name }}?</mat-dialog-content>
     <mat-dialog-actions>
       <button mat-button (click)="onCancel()">No</button>
       <button mat-button color="warn" (click)="onConfirm()">Yes</button>
     </mat-dialog-actions>
+    </div>
