--- a/uwazitek/src/app/settings/user-management/edit-user-dialog/edit-user-dialog.component.html
+++ b/uwazitek/src/app/settings/user-management/edit-user-dialog/edit-user-dialog.component.html
@@ -1,8 +1,7 @@
-
+<div class="edit-user">
 <h2 mat-dialog-title>Edit User</h2>
-
     <mat-dialog-content>
-      <form>
+      <form class="edit">
         <mat-form-field>
           <mat-label>Name</mat-label>
           <input matInput [(ngModel)]="data.user.name" name="name" />
@@ -13,7 +12,8 @@
         </mat-form-field>
       </form>
     </mat-dialog-content>
-    <mat-dialog-actions>
+    <mat-dialog-actions class="actions">
       <button mat-button (click)="onCancel()">Cancel</button>
-      <button mat-button color="primary" (click)="onSave()">Save</button>
+      <button mat-button (click)="onSave()">Save</button>
     </mat-dialog-actions>
+    </div>
