--- a/uwazitek/src/app/add-users/add-user-page.component.html
+++ b/uwazitek/src/app/add-users/add-user-page.component.html
@@ -11,6 +11,9 @@
     <mat-tab label="View users">
       <app-view-users></app-view-users>
     </mat-tab>
+    <mat-tab label="Add Policy Holder">
+      <app-policy-holder></app-policy-holder>
+    </mat-tab>
   </mat-tab-group>
 </nav>
 </div>
