--- a/uwazitek/src/app/add-users/hospital/user-hospital.component.html
+++ b/uwazitek/src/app/add-users/hospital/user-hospital.component.html
@@ -4,29 +4,33 @@
       <h2>Hospital Details</h2>
   
       <div class="form-group">
-        <div>
-        <label for="hospitalbranch">Hospital Branch :</label>
-        <input type="text" id="hospital_branch" formControlName="hospitalbranch" required />
-        <div *ngIf="hospitalForm.get('hospitalbranch')?.invalid && hospitalForm.get('hospitalbranch')?.touched" class="error">
-          Hospital name is required.
-        </div>
-      </div>
-        <div>
-        <label for="hospitalname">Hospital Name :</label>
-        <input type="text" id="hospital_name" formControlName="hospitalname" required />
-        <div *ngIf="hospitalForm.get('hospitalname')?.invalid && hospitalForm.get('hospitalname')?.touched" class="error">
-          Hospital name is required.
-        </div>
-      </div>
+        
       <div>
-        <label for="hospitaladdress">Address :</label>
-        <textarea id="hospital_address" formControlName="hospitaladdress" required></textarea>
-        <div *ngIf="hospitalForm.get('hospitaladdress')?.invalid && hospitalForm.get('hospitaladdress')?.touched" class="error">
+        <label for="hospital_address">Address :</label>
+        <textarea id="hospital_address" formControlName="hospital_address" required></textarea>
+        <div *ngIf="hospitalForm.get('hospital_address')?.invalid && hospitalForm.get('hospital_address')?.touched" class="error">
           Address is required.
         </div>
       </div>
+      <div>
+        <label for="hospital_branch">Hospital Branch :</label>
+        <input type="text" id="hospital_branch" formControlName="hospital_branch" required />
+        <div *ngIf="hospitalForm.get('hospital_branch')?.invalid && hospitalForm.get('hospital_branch')?.touched" class="error">
+          Hospital name is required.
+        </div>
       </div>
+        <div>
+        <label for="hospital_name">Hospital Name :</label>
+        <input type="text" id="hospital_name" formControlName="hospital_name" required />
+        <div *ngIf="hospitalForm.get('hospital_name')?.invalid && hospitalForm.get('hospital_name')?.touched" class="error">
+          Hospital name is required.
+        </div>
+      </div>
+      </div>
+      <div>
       <button type="submit" [disabled]="hospitalForm.invalid">Submit</button>
+      </div>
+      
       <div  id="form-feedback">
         <div *ngIf="AddError" class="error-message">{{AddError}}</div>
         <div *ngIf="AddSuccess" class="success-message">{{AddSuccess}}</div>
