--- a/uwazitek/src/app/add-users/insurance/user-insurance.component.html
+++ b/uwazitek/src/app/add-users/insurance/user-insurance.component.html
@@ -4,22 +4,21 @@
   
       <div class="form-group">
         <div>
-        <label for="insuranceName">Insurance Name :</label>
-        <input type="text" id="insuranceName" formControlName="insuranceName"required />
-        <div *ngIf="insuranceForm.get('insuranceName')?.invalid && insuranceForm.get('insuranceName')?.touched" class="error">
-        </div>
-      </div>
-        <div>
-        <label for="insuranceAddress">Insurance Address :</label>
-        <input type="text" id="insuranceAddress" formControlName="insuranceAddress" required />
-        <div *ngIf="insuranceForm.get('insuranceAddress')?.invalid && insuranceForm.get('insuranceAddress')?.touched" class="error">
+        <label for="address">Insurance Address :</label>
+        <input type="text" id="address" formControlName="address" required />
+        <div *ngIf="insuranceForm.get('address')?.invalid && insuranceForm.get('address')?.touched" class="error">
         </div>
       </div>
       <div>
-        <label for="phoneNumber">Contact Phone Number :</label>
-        <input type="number"  id="address" formControlName="phoneNumber" required />
-        <div *ngIf="insuranceForm.get('phoneNumber')?.invalid && insuranceForm.get('phoneNumber')?.touched" class="error">
-          
+        <label for="contact_phone_number">Contact Phone Number :</label>
+        <input type="number"  id="contact_phone_number" formControlName="contact_phone_number" required />
+        <div *ngIf="insuranceForm.get('contact_phone_number')?.invalid && insuranceForm.get('contact_phone_number')?.touched" class="error">  
+        </div>
+      </div>
+      <div>
+        <label for="insurance_name">Insurance Name :</label>
+        <input type="text" id="insurance_name" formControlName="insurance_name"required />
+        <div *ngIf="insuranceForm.get('insurance_name')?.invalid && insuranceForm.get('insurance_name')?.touched" class="error">
         </div>
       </div>
       </div>
