added the  post function

--- a/uwazitek/src/app/add-users/policy-holder/policy-holder.component.html
+++ b/uwazitek/src/app/add-users/policy-holder/policy-holder.component.html
@@ -4,9 +4,9 @@
   
       <div class="form-group">
         <div>
-        <label for="policyholderid">Policy Holder ID :</label>
-        <input type="text" id="policyholderid" ControlName="policyholderid" required />
-        <div *ngIf="policyholderForm.get('policyholderid')?. invalid && policyholderForm.get('policyholderid')?.touched" class="error">
+        <label for="policy_holder_id">Policy Holder ID :</label>
+        <input type="text" id="policy_holder_id" ControlName="policy_holder_id" required />
+        <div *ngIf="policyholderForm.get('policy_holder_id')?. invalid && policyholderForm.get('policy_holder_id')?.touched" class="error">
         </div>
       </div>
         
