--- a/uwazitek/src/app/add-users/insurance/user-insurance.component.html
+++ b/uwazitek/src/app/add-users/insurance/user-insurance.component.html
@@ -1,5 +1,5 @@
 <div class="insurance-form-container">
-    <form [formGroup]="insuranceForm">
+    <form [formGroup]="insuranceForm" (ngSubmit)="onSubmit()">
       <h2>Insurance Details</h2>
   
       <div class="form-group">
@@ -23,6 +23,11 @@
       </div>
       </div>
       <button type="submit" [disabled]="insuranceForm.invalid">Submit</button>
+      <div  id="form-feedback">
+        <div *ngIf="AddError" class="error-message">{{AddError}}</div>
+        <div *ngIf="AddSuccess" class="success-message">{{AddSuccess}}</div>
+       </div>
+      
     </form>
   </div>
   
