--- a/uwazitek/src/app/add-users/view-users/view-users.component.html
+++ b/uwazitek/src/app/add-users/view-users/view-users.component.html
@@ -1,1 +1,19 @@
-<p>view-users works!</p>
+<h2>Current Users onboarded to the system.</h2>
+<table class="onboarded-table">
+  <thead>
+    <tr>
+      <th>email</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Role</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let user of currentOnboardedUsers">
+      <td>{{ user.email }}</td>
+      <td>{{ user.first_name }}</td>
+      <td>{{ user.last_name }}</td>
+      <td>{{ user.role }}</td>
+    </tr>
+  </tbody>
+</table>
