--- a/uwazitek/src/app/add-users/hospital/user-hospital.component.html
+++ b/uwazitek/src/app/add-users/hospital/user-hospital.component.html
@@ -36,4 +36,17 @@
        </div>
     </form>
   </div>
+  <div *ngIf="hospitalDetails">
+    <h3>Hospital Details</h3>
+  <ul>
+    <li *ngFor="let hospital of hospitalDetails">
+      <p><strong>Hospital Name:</strong> {{ hospital.hospitalName }}</p>
+      <p><strong>Address:</strong> {{ hospital.hospitalAddress }}</p>
+      <p><strong>Branch:</strong> {{ hospital.hospitalBranch }}</p>
+    </li>
+  </ul>
+</div>
+  
+  
+
   
