--- a/uwazitek/src/app/add-users/view-users/view-users.component.html
+++ b/uwazitek/src/app/add-users/view-users/view-users.component.html
@@ -1,19 +1,29 @@
 <h2>Current Users onboarded to the system.</h2>
-<table class="onboarded-table">
+<div class="loading">
+ <p> Loading hospital details... </p>
+</div>
+
+<table *ngIf="let hospital of HospitalDetails" class="hospital-table">
   <thead>
     <tr>
-      <th>email</th>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Role</th>
+      <th>Hospital Name</th>
+      <th>Branch</th>
+      <th>Address</th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let user of currentOnboardedUsers">
-      <td>{{ user.email }}</td>
-      <td>{{ user.first_name }}</td>
-      <td>{{ user.last_name }}</td>
-      <td>{{ user.role }}</td>
+    <tr *ngFor="let hospital of hospitals";>
+      <td>{{ hospital.hospitalName }}</td>
+      <td>{{ hospital.hospitalBranch }}</td>
+      <td>{{ hospital.hospitalAddress }}</td>
+      <td>
+        <button class="btn btn-danger">Delete</button>
+      </td>
     </tr>
   </tbody>
 </table>
+
+<div *ngIf="hospitals no data" class="no-data">
+  No hospital records found.
+</div>
