--- a/uwazitek/src/app/activity/current-users/current-users.component.html
+++ b/uwazitek/src/app/activity/current-users/current-users.component.html
@@ -3,21 +3,22 @@
   <thead>
     <tr>
       <th>#</th>
-      <th>First Name</th>
-      <th>Last Name</th>
+      <th>Name</th>
       <th>Role</th>
       <th>Company Name</th>
       <th>Status</th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let user of activeUsers; let i = index">
+    <tr *ngFor="let users of activeUsers; let i = index">
       <td>{{ i + 1 }}</td>
-      <td>{{ user.first_name }}</td>
-      <td>{{ user.last_name }}</td>
-      <td>{{ user.role }}</td>
-      <td>{{ user.hospitalName }}</td>
-      <td>{{ user.status }}</td>
+      <td>{{ users.first_name }}{{ user.last_name }}</td>
+      <td>{{ users.role }}</td>
+      <td>
+        <span *ngIf="users.role === 'Hospital Admin'">{{ users.hospitalName }}</span>
+        <span *ngIf="users.role === 'Insurance Admin'">{{ users.inurance_name }}</span>
+      </td>
+      <td>{{ users.status }}</td>
     </tr>
   </tbody>
 </table>
