--- a/uwazitek/src/app/activity/current-users/current-users.component.html
+++ b/uwazitek/src/app/activity/current-users/current-users.component.html
@@ -12,7 +12,7 @@
   <tbody>
     <tr *ngFor="let users of activeUsers; let i = index">
       <td>{{ i + 1 }}</td>
-      <td>{{ users.first_name }}{{ user.last_name }}</td>
+      <td>{{ users.first_name }}{{ users.last_name }}</td>
       <td>{{ users.role }}</td>
       <td>
         <span *ngIf="users.role === 'Hospital Admin'">{{ users.hospitalName }}</span>
